# utt-wubi

./: AUTHORS  BUG  COPYING  HACKING  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  Wubi.txt  aclocal.m4  config.h.in  configure  configure.ac  libutt.pc.in  test.c  utt-wubi.c  utt_article.c  utt_article.h  utt_dashboard.c  utt_plugin.c  utt_plugin.h  utt_wubi.h  utt_xml.c  utt_xml.h  uttclassrecord.c  uttclassrecord.h  utttextarea.c  utttextarea.h  wubi_article.c  wubi_class.c  wubi_class.h  wubi_jianma.c  wubi_wenzhang.c  wubi_zigen.c  zigen_images.c  zigen_images.h
autom4te.cache/: output.0  output.1  output.2  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
data/: Makefile.am  Makefile.in  utt-wubi.desktop.in.in  utt.desktop.in.in
data/article/: 4566ec00-57fb-485f-8866-62396efbc213  4988cd8f-edd5-4dbd-9ff7-b5759390f40d  Makefile.am  Makefile.am~  Makefile.in  e1312442-9fa1-4a21-bf7d-c88208046ba6
data/artwork/: Makefile.am  Makefile.in
data/artwork/keyboard/: Makefile.am  Makefile.in  backspace.xcf  button.xcf  capslock.xcf  enter.xcf  gen_keyboard.c  keyboard_common.xcf  keyboard_english.xcf  pop.xcf  shift.xcf  space.xcf  tab.xcf
data/artwork/keyboard-wubi/: A.xcf  A_sub.xcf  B.xcf  B_sub.xcf  C.xcf  C_sub.xcf  D.xcf  D_sub.xcf  E.xcf  E_sub.xcf  F.xcf  F_sub.xcf  G.xcf  G_sub.xcf  H.xcf  H_sub.xcf  I.xcf  I_sub.xcf  J.xcf  J_sub.xcf  K.xcf  K_sub.xcf  L.xcf  L_sub.xcf  M.xcf  M_sub.xcf  Makefile.am  Makefile.in  N.xcf  N_sub.xcf  O.xcf  O_sub.xcf  P.xcf  P_sub.xcf  Q.xcf  Q_sub.xcf  R.xcf  README  R_sub.xcf  S.xcf  (+17 more)
data/icons/: Makefile.am  Makefile.in
data/icons/48x48/: Makefile.in
data/icons/48x48/apps/: Makefile.am  Makefile.in
data/zigen/: Makefile.am  Makefile.in
data/zigen/png/: Makefile.am  Makefile.in
include/: Makefile.am  Makefile.in
include/utt/: Makefile.am  Makefile.in  intl.h  keyboard.h  module.h
libutt/: Makefile.am  Makefile.in  keyboard.c  module.c
module/: Makefile.am  Makefile.in
module/english/: Makefile.am  Makefile.in  english.c  keyboard.c
module/pinyin/: Makefile.am  Makefile.in  pinyin.c
module/wubi/: Makefile.am  Makefile.in  jianma.c  wubi.c  zigen.c
po/: POTFILES.in  utt-wubi.po  zh_CN.po
src/: Makefile.am  Makefile.in  common.h  keyboard.c  keyboard.h  util.c  util.h  utt-wubi.c  utt.c  utt.h  utt_article.c  utt_article.h  utt_class_window.c  utt_compat.h  utt_dashboard.c  utt_dashboard.h  utt_debug.c  utt_debug.h  utt_gtk_compat.h  utt_plugin.c  utt_plugin.h  utt_wubi.h  utt_xml.c  utt_xml.h  uttclassrecord.c  uttclassrecord.h  utttextarea.c  utttextarea.h  wubi_article.c  wubi_jianma.c  wubi_table.c  wubi_table.h  wubi_wenzhang.c  wubi_zigen.c  zigen_images.c
