SUBDIRS = zigen

themedir = $(datadir)/icons/hicolor
size = 48x48
context = apps

iconsdir = $(themedir)/$(size)/$(context)
icons_DATA = \
	utt_wubi.png

imagesdir = $(pkgdatadir)
images_DATA = \
	button.png \
	dashboard.png \
	keyboard_wubi.png \
	keyboard_yiji.png

tablesdir = $(pkgdatadir)
tables_DATA = \
	Wubi.txt

EXTRA_DIST = \
	$(icons_DATA) \
	$(images_DATA) \
	$(tables_DATA)
