EXTRA_DIST = \
	A_sub.xcf \
	A.xcf \
	B_sub.xcf \
	B.xcf \
	C_sub.xcf \
	C.xcf \
	D_sub.xcf \
	D.xcf \
	E_sub.xcf \
	E.xcf \
	F_sub.xcf \
	F.xcf \
	gen0.sh \
	get_zigen_filename.sh \
	G_sub.xcf \
	G.xcf \
	H_sub.xcf \
	H.xcf \
	I_sub.xcf \
	I.xcf \
	J_sub.xcf \
	J.xcf \
	keyboard_wubi.xcf \
	keyboard_yiji.xcf \
	K_sub.xcf \
	K.xcf \
	L_sub.xcf \
	L.xcf \
	M_sub.xcf \
	M.xcf \
	N_sub.xcf \
	N.xcf \
	O_sub.xcf \
	O.xcf \
	P_sub.xcf \
	P.xcf \
	Q_sub.xcf \
	Q.xcf \
	README \
	R_sub.xcf \
	R.xcf \
	S_sub.xcf \
	S.xcf \
	T_sub.xcf \
	T.xcf \
	U_sub.xcf \
	U.xcf \
	V_sub.xcf \
	V.xcf \
	W_sub.xcf \
	W.xcf \
	X_sub.xcf \
	X.xcf \
	Y_sub.xcf \
	Y.xcf
