zigendir = $(pkgdatadir)/zigen
filetype = png

iconsdir = $(zigendir)/$(filetype)
icons_DATA = \
	A00.png \
	A01.png \
	A02.png \
	A03.png \
	A04.png \
	A05.png \
	A06.png \
	A07.png \
	A08.png \
	B00.png \
	B01.png \
	B02.png	\
	B03.png	\
	B04.png	\
	B05.png	\
	B06.png	\
	B07.png	\
	B08.png	\
	B09.png	\
	C00.png	\
	C01.png	\
	C02.png	\
	C03.png	\
	C04.png	\
	C05.png	\
	D00.png	\
	D01.png	\
	D02.png	\
	D03.png	\
	D04.png	\
	D05.png	\
	D06.png	\
	D07.png	\
	D08.png	\
	D09.png	\
	D10.png	\
	D11.png	\
	E00.png	\
	E01.png	\
	E02.png \
	E03.png	\
	E04.png	\
	E05.png	\
	E06.png	\
	E07.png	\
	E08.png	\
	E09.png	\
	E10.png	\
	E11.png	\
	F00.png	\
	F01.png	\
	F02.png	\
	F03.png	\
	F04.png	\
	F05.png	\
	F06.png	\
	F07.png	\
	G00.png	\
	G01.png	\
	G02.png	\
	G03.png	\
	G04.png	\
	H00.png	\
	H01.png	\
	H02.png	\
	H03.png	\
	H04.png	\
	H05.png	\
	H06.png	\
	H07.png	\
	H08.png	\
	H09.png	\
	H10.png	\
	I00.png	\
	I01.png	\
	I02.png	\
	I03.png	\
	I04.png	\
	I05.png	\
	I06.png	\
	I07.png	\
	I08.png	\
	I09.png	\
	J00.png	\
	J01.png	\
	J02.png	\
	J03.png	\
	J04.png	\
	J05.png	\
	J06.png	\
	J07.png	\
	J08.png	\
	K00.png	\
	K01.png	\
	K02.png	\
	L00.png	\
	L01.png	\
	L02.png	\
	L03.png	\
	L04.png	\
	L05.png	\
	L06.png	\
	L07.png	\
	L08.png	\
	M00.png	\
	M01.png	\
	M02.png	\
	M03.png	\
	M04.png	\
	M05.png	\
	N00.png	\
	N01.png	\
	N02.png	\
	N03.png	\
	N04.png	\
	N05.png	\
	N06.png	\
	N07.png	\
	N08.png	\
	N09.png	\
	N10.png	\
	O00.png	\
	O01.png	\
	O02.png	\
	O03.png	\
	O04.png	\
	P00.png	\
	P01.png	\
	P02.png	\
	P03.png	\
	P04.png	\
	P05.png	\
	Q00.png	\
	Q01.png	\
	Q02.png	\
	Q03.png	\
	Q04.png	\
	Q05.png	\
	Q06.png	\
	Q07.png	\
	Q08.png	\
	Q09.png	\
	Q10.png	\
	Q11.png	\
	R00.png	\
	R01.png	\
	R02.png	\
	R03.png	\
	R04.png	\
	R05.png	\
	R06.png	\
	R07.png	\
	R08.png	\
	S00.png	\
	S01.png	\
	S02.png	\
	T00.png	\
	T01.png	\
	T02.png	\
	T03.png	\
	T04.png	\
	T05.png	\
	T06.png	\
	T07.png	\
	T08.png	\
	U00.png	\
	U01.png	\
	U02.png	\
	U03.png	\
	U04.png	\
	U05.png	\
	U06.png	\
	U07.png	\
	U08.png	\
	U09.png	\
	V00.png	\
	V01.png	\
	V02.png	\
	V03.png	\
	V04.png	\
	V05.png	\
	W00.png	\
	W01.png	\
	W02.png	\
	W03.png	\
	X00.png	\
	X01.png	\
	X02.png	\
	X03.png	\
	X04.png	\
	X05.png	\
	Y00.png	\
	Y01.png	\
	Y02.png	\
	Y03.png	\
	Y04.png	\
	Y05.png	\
	Y06.png	\
	Y07.png	\
	Y08.png	\
	Y09.png

EXTRA_DIST = \
	$(icons_DATA)
